# umfeld-examples

./: .gitignore  index.html  test-run-processing-examples.sh  test_props.json
Advanced/graphics-terminal/: application.cpp
Advanced/offscreen/: application.cpp
Advanced/texture-filtering/: application.cpp
Audio/midi-input/: application.cpp
Audio/threaded/: CMakeLists.txt  application.cpp
Basics/load-image/: application.cpp
Basics/pixels/: CMakeLists.txt  application.cpp
Basics/save-frame/: application.cpp
Basics/shapes/: application.cpp
Basics/shapes-stroke-and-fill/: application.cpp
Processing/: README.md
Processing/Basics/AdvancedData/counting_strings/: application.cpp
Processing/Basics/Arrays/Array/: application.cpp
Processing/Basics/Arrays/Array2D/: CMakeLists.txt  application.cpp
Processing/Basics/Arrays/ArrayObjects/: CMakeLists.txt
Processing/Basics/Arrays/array_2d/: CMakeLists.txt  application.cpp
Processing/Basics/Arrays/array_objects/: CMakeLists.txt  application.cpp  (+1 more)
Processing/Basics/Control/: README.md
Research/profiling-opengl-pipeline/: CMakeLists.txt  application.cpp
Research/umfeld-application-bundle/: application.cpp
vrtest/: README.md  failed_projects.txt  generate_report.py  index.html  main.py  requirements.txt  run_log_20250807_191810.txt  run_log_20250813_202406.txt  run_log_20250813_202420.txt  run_log_20250814_170854.txt  run_log_20250815_105326.txt  run_log_20250815_110626.txt  run_log_20250815_110653.txt  run_log_20250815_111102.txt  sort_json.py  test_props.json  utils.py
wip-examples/: README.md
(+669 files in other folders)
